@@ -1,3 +1,10 @@
+1999-07-27  Nick Clifton  <nickc@cygnus.com>
+
+	Patch generated by Bernd Schmidt. <bernds@cygnus.co.uk>
+	
+	* coff-arm.c (coff_arm_is_local_label_name): Change to strip
+	out only symbols that start with LOCAL_LABEL_PREFIX followed by 'L'.
+
 1999-07-23  Donn Terry  <donn@interix.com>
 
 	* libcoff-in.h (coff_link_hash_entry): Add coff_link_hash_flags
